--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
-    <meta content="#000000" name="theme-color"/>
-    <meta content="Web site created using create-react-app" name="description"/>
-    <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
+    <meta charset="utf-8" />
+    <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <meta content="#000000" name="theme-color" />
+    <meta
+      content="Web site created using create-react-app"
+      name="description"
+    />
+    <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,8 +25,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,800&display=swap" rel="stylesheet"/>
-    <title>React Go Serf</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap"
+      rel="stylesheet"
+    />
+    <title>React Go Surf</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
